shortavee-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortavee-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: shortavee.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: backend
            port:
              number: 8080
